# company-ratings-service

./: README.md  alembic.ini  pyproject.toml
integrations/: docker-compose.yml
migrations/: README.md  env.py
migrations/versions/: 330296f6ee0f_initial_migration.py  39a9ba1a9fa9_change_mappings.py  6153e751dbe2_change_relations_add_profile.py  71a865d9bfe9_remove_disabled_field.py  790dfab0ee7d_add_token_entity.py  8bc2e876ad24_add_relation_to_profile_and_user.py  91b66cf640b4_remove_username_field.py  9dccd0b8cb7a_add_email_to_index.py  aa12048a5867_real_first_init.py  b70487da0b76_fix_model.py  bc3e6ab92065_change_token_model.py  d4f39a3eac00_remove_role_field.py  db9a8fbae8ec_remove_key_field.py  e6bfc7839bb8_add_fastapi_users_inegration.py
src/: errors.py  main.py  settings.py
src/api_models/: organisation.py  service.py  user.py
src/database_models/: organisation.py  user.py
src/router/: auth.py
src/service/: auth.py  profile.py
src/storage/: crud.py  engine.py  models.py
